--- a/artworks3.html
+++ b/artworks3.html
@@ -128,6 +128,12 @@
                   </div>
               </li>
             
+              <li>
+                  <div><a href="signup.html">
+                    <button type="button" class="sizecheck" style="color: #000;">Sign Up</button> 
+                  </a></div>
+              </li>
+
               <li class="cart">
                 <a href="help.html">
                   <ion-icon name="basket"></ion-icon>CART<span> 0 </span>
