--- a/FAQ.html
+++ b/FAQ.html
@@ -7,8 +7,154 @@
     <title>Document</title>
     <link rel="stylesheet" href="FAQ.css">
     <script src="FAQ.js"></script>
+    <meta name="description" content="This is the description">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+<style>
+    .search-container{
+        margin-top: 10px;
+   }
+
+   .button {
+     display: inline-block;
+     padding: 10px 20px;
+     text-align: center;
+     text-decoration: none;
+     color: #ffffff;
+     background-color: #7aa8b7;
+     border-radius: 6px;
+     outline: none;
+   }
+
+.menu-btn {
+background-color: black;
+color: white;
+padding: 0px;
+padding-top: 5px;
+font-size: 20px;
+font-weight: none;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+ border-top-width: 0px;
+ border-left-width: 00px;
+ border-bottom-width: 00px;
+ border-right-width: 0px;
+
+
+}
+.dropdown-menu {
+position: relative;
+display: inline-block;
+min-width: 10px;
+padding-top: 0px;
+ padding-right: 0px;
+ padding-bottom: 0px;
+ padding-left: 0px;
+}
+
+.menu-content {
+ text-align: center;
+ display: none;
+ position: inherit;
+ background-color: #9d9d9d;
+ color: #000;
+ list-style: none;
+ width: auto;
+ box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.2);
+ z-index: 998;
+} 
+
+nav{
+background-color: #017575;
+}
+
+.links,.links-hidden{
+display: inline-block;
+color: rgb(255, 255, 255);
+padding: 6px 6px;
+text-decoration: none;
+font-size: 18px;
+font-weight: bold;
+}
+.links-hidden{
+display: block;
+}
+.links{
+display: inline-block;
+}
+.links-hidden:hover,.links:hover {
+background-color: rgb(84, 85, 85);
+}
+.dropdown-menu:hover .menu-content {
+display: block;
+}
+.dropdown-menu:hover .menu-btn {
+background-color: #3e8e41;
+}
+
+    </style>
 </head>
 <body>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <nav class="navbar navbar-inverse navbar-fixed-top">  
+    <div class="container-fluid">
+      <div class="navbar-header">
+      </div>
+<ul class="nav navbar-nav">
+  <li><a class="active" href="home.html">Home</a></li>
+   <li><a href="artistfinal.html">Artist</a></li>
+  <li><a href="#artworksfinal">Art works</a></li>
+  <li><a href="faq.html">FAQs</a></li>
+  <li><a href="help.html">Help</a></li>
+  <li>
+      <a href="profile.html">Profile&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      </a>
+  </li>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</ul>
+
+  <ul class="nav navbar-nav navbar-right">
+  <li>
+    <div class="search-container">
+      <form >
+        <input type="text" placeholder="Search" name="search">
+        <button type="submit" onclick= "alert('SEARCH QUERY INITIATED!')"i class="fa fa-search"></i></button>
+      </form>
+    </div>
+  </li>
+  <li>
+    <div class="class1" style="padding-top:10px; padding-right:10px ;padding-left:10px">
+      <a href="login.html">
+          <button type="button"  class="sizecheck" style="color: #000;" >Login</button> 
+          </a>   
+      </div>
+  </li>
+
+  
+  <li>
+    <div style="padding-left:10px; padding-top:10px"><a href="signup.html">
+      <button type="button" class="sizecheck" style="color: #000;">Sign Up</button> 
+    </a></div>
+</li>
+
+
+  <li class="cart">
+    <a href="help.html">
+      <ion-icon name="basket"></ion-icon>CART<span> 0 </span>
+    </a>
+  </li>
+<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+</ul>
+</div>
+<br>
+</nav>
+
+
     <h1>FAQ'S</h1>
 <dl class="faq">
   <dt>
