--- a/artworks2.html
+++ b/artworks2.html
@@ -11,42 +11,42 @@
             <nav class="main-nav nav">
                 <ul>
                     <li><a href="shopcart.html">HOME</a></li>
-                    <li><a href="artworks2.html">STORE</a></li>
+                    <li><a href="artworks2.html">CART</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </nav>
-            <h1 class="band-name band-name-large">The Generics</h1>
-        </header>
+    </header>
+
         <section class="container content-section">
-            <h2 class="section-header">MUSIC</h2>
+            <h2 class="section-header">Arts</h2>
             <div class="shop-items">
                 <div class="shop-item">
-                    <span class="shop-item-title">Album 1</span>
-                    <img class="shop-item-image" src="Images/Album 1.png">
+                    <span class="shop-item-title">Painting</span>
+                    <img class="shop-item-image" src="img2.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$12.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="shop-item">
-                    <span class="shop-item-title">Album 2</span>
-                    <img class="shop-item-image" src="Images/Album 2.png">
+                    <span class="shop-item-title">Crafts</span>
+                    <img class="shop-item-image" src="img1.jpg">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$14.99</span>
                         <button class="btn btn-primary shop-item-button"type="button">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="shop-item">
-                    <span class="shop-item-title">Album 3</span>
-                    <img class="shop-item-image" src="Images/Album 3.png">
+                    <span class="shop-item-title"></span>
+                    <img class="shop-item-image" src="img3.jpg">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$9.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="shop-item">
-                    <span class="shop-item-title">Album 4</span>
-                    <img class="shop-item-image" src="Images/Album 4.png">
+                    <span class="shop-item-title"></span>
+                    <img class="shop-item-image" src="img1.jpg">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$19.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -55,28 +55,7 @@
             </div>
         </section>
 
-        <section class="container content-section">
-            <h2 class="section-header">MERCH</h2>
-            <div class="shop-items">
-                <div class="shop-item">
-                    <span class="shop-item-title">T-Shirt</span>
-                    <img class="shop-item-image" src="img1.jpg">
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$19.99</span>
-                        <button class= "btn btn-primary shop-item-button" type="button">ADD TO CART</button>
-                    </div>
-                </div>
-                <div class="shop-item">
-                    <span class="shop-item-title">Coffee Cup</span>
-                    <img class="shop-item-image" src="img2.png">
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$6.99</span>
-                        <button class="btn btn-primary shop-item-button" type="button"> ADD TO CART </button>
-                    </div>
-                </div>
-            </div>
-        </section>
-        
+    
             <section class="container content-section">
                 <h2 class="section-header">CART</h2>
                 <div class="cart-row">
