--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     box-sizing: border-box;
     color:white;
     padding: 15px 30px;
-    background-color: lightblue;
+    background-color: rgb(4, 81, 107);
 }
 body{
      margin-top: 100px;
@@ -15,7 +15,8 @@ body{
     margin-right: 200px;
      margin-left: 100px;
     background-color: rgb(59, 136, 252);
-    color: white;
+    background-image: url("img6.jpg");
+    color: black;
     font-size: x-large ;
     box-sizing: border-box;
     }
@@ -26,8 +27,8 @@ body{
   display: flex;
   }
 .main{
-  background-color:black;
-  margin-left:200px ;
+  background-color:rgba(255, 255, 255, 0.671);
+  margin-left:300px ;
   margin-right: 200px;
   margin-bottom: 100px;
 }
@@ -35,7 +36,7 @@ body{
   background: red;
   width: 150px;
   border-radius: 3px;
-  padding: 5px 20px 10px 10px;
+  padding: 5px 25px 10px 10px;
   background-color: rgba(255,255,255,0.27);
   color: #eaf0fb;
   text-align: center;
