--- a/FAQ.html
+++ b/FAQ.html
@@ -108,7 +108,7 @@ background-color: #3e8e41;
 <ul class="nav navbar-nav">
   <li><a class="active" href="home.html">Home</a></li>
    <li><a href="artistfinal.html">Artist</a></li>
-  <li><a href="#artworksfinal">Art works</a></li>
+  <li><a href="artworksfinal.html">Art works</a></li>
   <li><a href="faq.html">FAQs</a></li>
   <li><a href="help.html">Help</a></li>
   <li>
@@ -151,7 +151,6 @@ background-color: #3e8e41;
 <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </ul>
 </div>
-<br>
 </nav>
 
 
